# tables_relationship

./: .gitignore  .jokes.db  crud.py  database.py  main.py  pyproject.toml
models/: __init__.py  base.py  category.py  joke.py  reaction.py  user.py
router_api/: router.py  router_category.py  router_joke.py  router_reaction.py  router_user.py
schemas/: __init__.py  category.py  joke.py  reaction.py  user.py
